@@ -1,0 +1,12 @@
+{
+    "name": "Fedora",
+    "servers": [
+        {
+            "hostname": "nova1",
+            "memory": "1",
+            "gateway": "true",
+            "original_xml": "/home/dprince/f17.xml",
+            "create_cow": "true"
+        }
+    ]
+}
