@@ -1,3 +1,7 @@
+* Wed Aug 22 2012 Dan Prince <dprince@redhat.com> - 1.1.0
+  - Add local libvirt provider based on virt-clone.
+  - Libvirt: Support creating qcow2 disks during group creation.
+
 * Fri Jul 27 2012 Dan Prince <dprince@redhat.com> - 1.0.2
   - XenServer: Use force=true when shutting down VMs.
 
